--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "start:ref": "nest start --watch references",
     "start:fin": "nest start --watch finance",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/tirgo/main",
+    "start:prod": "node dist/apps/users/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/tirgo/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/users/test/jest-e2e.json"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.490.0",
