--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/microservices": "^10.3.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.3",
+    "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^10.3.3",
     "amqp-connection-manager": "^4.1.14",
@@ -49,6 +50,7 @@
     "request-promise": "^4.2.6",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.4",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.19"
   },
   "devDependencies": {
