--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "reflect-metadata": "^0.1.13",
     "request-promise": "^4.2.6",
     "rxjs": "^7.8.1",
+    "sendpulse-api": "^1.1.7",
     "socket.io": "^4.7.4",
     "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.19"
