--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^16.4.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.9.9",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
